# jmap-wasm

./: .gitignore  .markdownlint-cli2.jsonc  AGENTS.md  Cargo.toml  Makefile  README.md  imap-tool.capabilities.json  jmap-tool.capabilities.json  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
crates/jmap-codec/: Cargo.toml  README.md
crates/jmap-codec/src/: core.rs  lib.rs
crates/jmap-codec/src/mail/: email.rs  email_tests.rs  mailbox.rs  mod.rs
docs/: scripting-standards.md  users-guide.md  writing-web-assembly-tools-for-ironclaw.md
docs/execplans/: initial-plugin.md
src/: actions.rs  e2e_tests.rs  errors.rs  host.rs  jmap_transport.rs  lib.rs  mappers.rs  outputs.rs  protocol.rs  schema.rs  service.rs  test_support.rs  tests.rs  tests_bdd.rs
tests/: imap_e2e.rs  jmap_e2e.rs
tests/features/: imap_tool.feature  jmap_tool.feature
wit/: tool.wit
